--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
+<meta charset="utf-8"/>
+<html>
+<head>
+	<title> Home </title>
+</head>
+<body>
 <h1> S174 tinklapis </h1>
 
-Čia kuriamas mano tinklapis 
-
-Šio tinklapio kūrimas yra 1.Seminaro darbas
+<p>Čia kuriamas mano tinklapis </p>
+<p> Šio tinklapio kūrimas yra 1.Seminaro darbas </p>
+</body>
+</html>
