--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 
 <p>Čia kuriamas mano tinklapis </p>
 <p> Šio tinklapio kūrimas yra 1.Seminaro darbas </p>
+<p> <img src="images/github.png" alt="github paveiksliukas"></p>
+<p><img src="https://studyguide.itu.dk/~/media/studyguide/student-life/facilities-at-itu/it-facilities/github/github_logo.png?h=248&w=573&la=en"></p>
 </body>
 </html>
