--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <h1> S174 tinklapis </h1>
-
 <p>Čia kuriamas mano tinklapis </p>
 <p> Šio tinklapio kūrimas yra 1.Seminaro darbas </p>
+<br>
+<a href="about.html">Daugiau informacijos apie mane</a>
 <p> <img src="images/github.png" alt="github paveiksliukas"></p>
 <p><img src="https://studyguide.itu.dk/~/media/studyguide/student-life/facilities-at-itu/it-facilities/github/github_logo.png?h=248&w=573&la=en"></p>
 </body>
